src/objects/UAT__c.object
<CustomObject>
    <fields>
        <fullName>Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link to Credential and Data file</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ProdOwnerFN__c</fullName>
        <formula>Product_Owner__r.FirstName &amp; &quot; &quot; &amp;  Product_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProdOwnerFN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UAT</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>UAT</relationshipLabel>
        <relationshipName>UAT</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sandbox__c</fullName>
        <label>Sandbox</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TechOwnerFN__c</fullName>
        <formula>Technical_Owner__r.FirstName &amp; &quot; &quot;&amp;  Technical_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TechOwnerFN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UAT1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Scenario_Description__c</fullName>
        <label>UAT Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UAT_Scenario_Total_Number__c</fullName>
        <label>UAT Scenario Total Number</label>
        <summaryForeignKey>UAT_Scenario__c.UAT__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>UAT</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>UAT Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UAT</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>